--- a/projects/wolfram-cli/Cargo.toml
+++ b/projects/wolfram-cli/Cargo.toml
@@ -1,13 +1,18 @@
 [package]
-name = "wolfram-rs"
-version = "0.1.0"
+name = "wolfram-cli"
+publish=false
+version = "0.0.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "..."
-repository = "https://github.com/nyar-lang/Notedown-rs"
+repository = "https://github.com/GalAster/carbon-rs"
 readme = "README.md"
 license = "MPL-2.0"
 edition = "2018"
 
+
 [dependencies]
-num-bigint = "0.2.6"
-serde_json = "1.0"
+
+
+
+
+
