--- a/projects/wolfram-lib/Cargo.toml
+++ b/projects/wolfram-lib/Cargo.toml
@@ -9,5 +9,6 @@ license = "MPL-2.0"
 edition = "2018"
 
 [dependencies]
-num-bigint = "0.2.6"
+# ordered-float = "1.0"
+num = "0.2"
 serde_json = "1.0"
