--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "pre": "cargo test --color=always --no-run --package notedown-parser --lib pre_build && cargo fmt --all",
         "build": "cargo build --release",
-        "test": "cargo build",
+        "test": "cargo test --release",
         "fmt": "cargo fmt --all",
         "push": "yarn test && git push",
         "reset": "git reset Head~ --soft",
