--- a/projects/wolfram-lib/Cargo.toml
+++ b/projects/wolfram-lib/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "wolfram-rs"
+name = "wolfram_wxf"
 version = "0.1.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "..."
-repository = "https://github.com/nyar-lang/Notedown-rs"
-readme = "README.md"
+repository = "https://github.com/GalAster/wolfram-exchange"
+readme = "../../README.md"
 license = "MPL-2.0"
 edition = "2018"
 
