--- a/projects/wolfram-lib/Cargo.toml
+++ b/projects/wolfram-lib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wolfram_wxf"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "..."
 repository = "https://github.com/GalAster/wolfram-exchange"
@@ -11,4 +11,8 @@ edition = "2018"
 [dependencies]
 # ordered-float = "1.0"
 num = "0.2"
-serde_json = "1.0"
+serde_json = {version="1.0",optional=true}
+
+[features]
+default = []
+json = ["serde_json"]
