--- a/projects/wolfram-lib/Cargo.toml
+++ b/projects/wolfram-lib/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2018"
 [dependencies]
 # ordered-float = "1.0"
 num = "0.2"
+flate2 = "1.0"
 serde_json = {version="1.0",optional=true}
 
 [features]
