--- a/projects/wolfram-lib/Cargo.toml
+++ b/projects/wolfram-lib/Cargo.toml
@@ -13,7 +13,8 @@ edition = "2018"
 num = "0.2"
 flate2 = "1.0"
 serde_json = {version="1.0",optional=true}
-
+serde-pickle =  {version="0.6",optional=true}
 [features]
 default = []
 json = ["serde_json"]
+pickle = ["serde-pickle"]
