🐣 Try to support pickle

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ members = ["projects/*"]
 default-members = [
     "projects/wolfram-serde",
     "projects/wolfram-lib",
+    "projects/wolfram-cli",
 ]
 
