--- a/projects/wolfram-lib/Cargo.toml
+++ b/projects/wolfram-lib/Cargo.toml
@@ -13,9 +13,11 @@ edition = "2018"
 num = "0.2"
 flate2 = "1.0"
 serde_json = {version="1.0",optional=true}
+yaml-rust =  {version="0.4",optional=true}
 serde-pickle =  {version="0.6",optional=true}
 
 [features]
 default = []
 json = ["serde_json"]
+yaml = ["yaml-rust"]
 pickle = ["serde-pickle"]
