🐣 Support toml format

--- a/projects/wolfram-lib/Cargo.toml
+++ b/projects/wolfram-lib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wolfram_wxf"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "..."
 repository = "https://github.com/GalAster/wolfram-exchange"
@@ -14,6 +14,7 @@ num = "0.2"
 flate2 = "1.0"
 serde_json = {version="1.0",optional=true}
 yaml-rust =  {version="0.4",optional=true}
+toml =  {version="0.5",optional=true}
 serde-pickle =  {version="0.6",optional=true}
 
 [features]
@@ -21,3 +22,4 @@ default = []
 json = ["serde_json"]
 yaml = ["yaml-rust"]
 pickle = ["serde-pickle"]
+# toml = ["toml"]
