🎀 Support named structure

--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -2,6 +2,6 @@ version = "Two"
 edition = "2018"
 max_width = 144
 
-merge_imports = true
+imports_granularity = "Crate"
 use_small_heuristics = "Max"
 control_brace_style = "ClosingNextLine"
