🎀 Update wolfram version to 2020.7.7

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,10 @@ default-members = [
     "projects/wolfram-lib",
 ]
 
+exclude = [
+    "projects/.DS_Store",
+    "projects/project-logo",
+]
+
+[profile.release]
+lto = true
