--- a/projects/wolfram-lib/Cargo.toml
+++ b/projects/wolfram-lib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wolfram_wxf"
-version = "0.4.0"
+version = "0.5.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "..."
 repository = "https://github.com/GalAster/wolfram-exchange"
@@ -9,16 +9,16 @@ license = "MPL-2.0"
 edition = "2018"
 
 [dependencies]
-num = "0.2"
+num = "0.4"
 flate2 = "1.0"
-ndarray = "0.13"
+ndarray = "0.15"
+integer-encoding = "3.0"
 
-
-serde_json = {version="1.0",optional=true}
-yaml-rust =  {version="0.4",optional=true}
-toml =  {version="0.5",optional=true}
-serde-pickle =  {version="0.6",optional=true}
-npy =  {version="0.4",optional=true}
+serde_json = { version = "1.0", optional = true }
+yaml-rust = { version = "0.4", optional = true }
+toml = { version = "0.5", optional = true }
+serde-pickle = { version = "0.6", optional = true }
+npy = { version = "0.4", optional = true }
 
 [features]
 default = []
