--- a/projects/wolfram-lib/Cargo.toml
+++ b/projects/wolfram-lib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wolfram_wxf"
-version = "0.6.0"
+version = "0.6.1"
 authors = ["Aster <192607617@qq.com>"]
 description = "..."
 repository = "https://github.com/oovm/wolfram-exchange"
@@ -9,20 +9,20 @@ license = "MPL-2.0"
 edition = "2018"
 
 [dependencies]
-num = "0.4"
-flate2 = "1.0"
-ndarray = "0.15"
-integer-encoding = "3.0"
+num = "0.4.0"
+flate2 = "1.0.22"
+ndarray = "0.15.4"
+integer-encoding = "3.0.3"
 
-serde_json = { version = "1.0", optional = true }
-yaml-rust = { version = "0.4", optional = true }
-toml = { version = "0.5", optional = true }
-serde-pickle = { version = "0.6", optional = true }
-npy = { version = "0.4", optional = true }
+json5 = { version = "0.4.1", optional = true }
+yaml-rust = { version = "0.4.5", optional = true }
+toml = { version = "0.5.8", optional = true }
+serde-pickle = { version = "1.1.0", optional = true }
+npy = { version = "0.4.0", optional = true }
 
 [features]
 default = []
-json = ["serde_json"]
+json = ["json5"]
 yaml = ["yaml-rust"]
 pickle = ["serde-pickle"]
 # toml = ["toml"]
