Add support for toml yaml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = ["projects/*"]
 default-members = [
     "projects/wolfram-serde",
     "projects/wolfram-lib",
+    "projects/wolfram-cli",
 ]
 
 exclude = [
