--- a/projects/wolfram-lib/Cargo.toml
+++ b/projects/wolfram-lib/Cargo.toml
@@ -6,7 +6,8 @@ description = "..."
 repository = "https://github.com/oovm/wolfram-exchange"
 readme = "../../README.md"
 license = "MPL-2.0"
-edition = "2018"
+edition = "2021"
+exclude = ["*.m", "test/"]
 
 [dependencies]
 num = "0.4.0"
@@ -14,6 +15,7 @@ flate2 = "1.0.22"
 ndarray = "0.15.4"
 integer-encoding = "3.0.3"
 
+serde_json = { version = "1.0.79", optional = true }
 json5 = { version = "0.4.1", optional = true }
 yaml-rust = { version = "0.4.5", optional = true }
 toml = { version = "0.5.8", optional = true }
@@ -21,9 +23,8 @@ serde-pickle = { version = "1.1.0", optional = true }
 npy = { version = "0.4.0", optional = true }
 
 [features]
-default = []
-json = ["json5"]
+default = ["json5", "toml"]
+json = ["serde_json"]
 yaml = ["yaml-rust"]
 pickle = ["serde-pickle"]
-# toml = ["toml"]
 numpy = ["npy"]
