--- a/projects/wolfram-lib/Cargo.toml
+++ b/projects/wolfram-lib/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "wolfram_wxf"
-version = "0.6.1"
+version = "0.6.2"
 authors = ["Aster <192607617@qq.com>"]
-description = "..."
+description = "Convert a value to the Wolfram Language WXF format."
 repository = "https://github.com/oovm/wolfram-exchange"
+documentation = "https://docs.rs/wolfram_wxf"
 readme = "../../README.md"
 license = "MPL-2.0"
 edition = "2021"
-exclude = ["*.m", "test/"]
+exclude = ["*.m", "*.json", "test/"]
 
 [dependencies]
 num = "0.4.0"
