--- a/projects/wolfram-cli/Cargo.toml
+++ b/projects/wolfram-cli/Cargo.toml
@@ -17,8 +17,7 @@ path = "src/main.rs"
 clap= "3.1.6"
 
 [dependencies.wolfram_wxf]
-version = "0.6.0"
+version = "0.6.2"
 default-features = false
-features = ["json5", "pickle", "yaml", "toml"]
+features = ["json", "pickle", "yaml", "toml"]
 path = "../wolfram-lib"
-
