--- a/projects/wolfram-cli/package.json
+++ b/projects/wolfram-cli/package.json
@@ -5,8 +5,8 @@
         "build": "cargo build --release",
         "test": "cargo test --release",
         "fmt": "cargo fmt --all",
-        "push": "yarn test && git push && git push --tags",
-        "reset": "git reset Head~ --soft",
-        "pub": "cargo-publish-all --yes --allow-dirty"
+        "d": "cargo install --path . --debug",
+        "i": "cargo install --path .",
+        "p": "cargo publish --allow-dirty"
     }
 }
