--- a/projects/wolfram-lib/Cargo.toml
+++ b/projects/wolfram-lib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wolfram_wxf"
-version = "0.6.3"
+version = "0.6.4"
 authors = ["Aster <192607617@qq.com>"]
 description = "Convert a value to the Wolfram Language WXF format."
 repository = "https://github.com/oovm/wolfram-exchange"
@@ -19,12 +19,12 @@ integer-encoding = "3.0.3"
 serde_json = { version = "1.0.79", optional = true }
 json5 = { version = "0.4.1", optional = true }
 yaml-rust = { version = "0.4.5", optional = true }
-toml = { version = "0.5.8", optional = true }
+toml = { version = "0.7.3", optional = true }
 serde-pickle = { version = "1.1.0", optional = true }
 npy = { version = "0.4.0", optional = true }
 
 [features]
-default = ["json5", "toml"]
+default = []
 json = ["serde_json", "json5"]
 yaml = ["yaml-rust"]
 pickle = ["serde-pickle"]
