--- a/projects/wolfram-lib/Cargo.toml
+++ b/projects/wolfram-lib/Cargo.toml
@@ -15,6 +15,7 @@ num = "0.4.0"
 flate2 = "1.0.22"
 ndarray = "0.15.4"
 integer-encoding = "3.0.3"
+serde = "1.0.162"
 
 serde_json = { version = "1.0.79", optional = true }
 json5 = { version = "0.4.1", optional = true }
