--- a/projects/wolfram-lib/Cargo.toml
+++ b/projects/wolfram-lib/Cargo.toml
@@ -24,6 +24,9 @@ toml = { version = "0.7.3", optional = true }
 serde-pickle = { version = "1.1.0", optional = true }
 npy = { version = "0.4.0", optional = true }
 
+[dev-dependencies]
+serde_derive = "1.0.162"
+
 [features]
 default = []
 json = ["serde_json", "json5"]
