--- a/projects/wolfram-lib/Cargo.toml
+++ b/projects/wolfram-lib/Cargo.toml
@@ -12,6 +12,7 @@ exclude = ["*.m", "*.json", "test/"]
 
 [dependencies]
 num = "0.4.0"
+ordered-float = "3.7.0"
 flate2 = "1.0.22"
 ndarray = "0.15.4"
 integer-encoding = "3.0.3"
